# voice_input

./: .gitignore  README.md  pyproject.toml
src/voice_input/: __init__.py  __main__.py  app.py  audio.py  config.py  text_output.py  transcriber.py  window.py
tests/: test_app.py  test_audio.py  test_config.py  test_text_output.py  test_transcriber.py  test_window.py
