[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "voice_input"
version = "0.1.0"
description = "Windows voice input utility with global hotkey trigger"
readme = "README.md"
authors = [{ name = "Auto Generated" }]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "sounddevice>=0.4",
    "keyboard>=0.13",
    "pyperclip>=1.8",
    "faster-whisper>=0.10",
]

[project.scripts]
voice-input = "voice_input.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
